@@ -1,0 +1,20 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x128
+  RenderBlock {HTML} at (0,0) size 800x128
+    RenderBody {BODY} at (8,8) size 784x112
+      RenderBlock {DIV} at (0,0) size 784x112 [border: (2px solid #FF0000)]
+        RenderInline {SPAN} at (0,0) size 205x84
+          RenderText {TEXT} at (14,14) size 15x28
+            text run at (14,14) width 15: "s "
+          RenderBR {BR} at (0,0) size 0x0
+          RenderText {TEXT} at (0,0) size 0x0
+          RenderBR {BR} at (14,42) size 0x28
+          RenderText {TEXT} at (14,70) size 205x28
+            text run at (14,70) width 94: " war. We "
+            text run at (108,70) width 111: "of that war."
+        RenderText {TEXT} at (0,0) size 0x0
+selection is CARET:
+start:      position 0 of child 5 {TEXT} of child 2 {SPAN} of root {DIV}
+upstream:   position 1 of child 4 {BR} of child 2 {SPAN} of root {DIV}
+downstream: position 0 of child 5 {TEXT} of child 2 {SPAN} of root {DIV}
