@@ -1,0 +1,39 @@
+<html> 
+<head>
+
+<style>
+.editing { 
+    border: 2px solid red; 
+    padding: 12px; 
+    font-size: 24px; 
+}
+</style>
+<script src=../editing.js language="JavaScript" type="text/JavaScript" ></script>
+
+<script>
+
+function editingTest() {
+    for (i = 0; i < 8; i++) {
+        moveSelectionForwardByCharacterCommand();    
+    }
+    for (i = 0; i < 4; i++) {
+        deleteCommand(); 
+    }
+}
+
+</script>
+
+<title>Editing Test</title> 
+</head> 
+<body>
+<div contenteditable id="root" class="editing">
+<span id="test">s <br>
+<br>that war. We  of that war.</span>
+</div>
+
+<script>
+runEditingTest();
+</script>
+
+</body>
+</html>
