@@ -1,3 +1,12 @@
+2004-04-09  Ken Kocienda  <kocienda@apple.com>
+
+        Reviewed by me
+        
+        Added one more layout test for editing.
+
+        * layout-tests/editing/deleting/delete-3608445-fix-expected.txt: Added.
+        * layout-tests/editing/deleting/delete-3608445-fix.html: Added.
+
 2004-04-08  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by John.
